Add "justify-content:space-between" to header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="site-header">
             <a href="index.html">
-                <img src="images/logo/main-logo.jpg" alt="古典のすゝめ">
+                <img src="images/logo/main-logo.png" alt="古典のすゝめ">
             </a>
         </div>
         <nav class="header-nav">
