--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
             <img src="images/main_image.jpg" alt="main image">
         </section>
         
-        <!--our purpose-->
+        <!--about this site-->
         <section id="introduction" class="container">
             <h1 class="introduction-title">
-                あいうえお
+                このサイトについて
             </h1>
             <h2 class="introduction-content">
-                説明
+                このサイトでは、古典を中心とした文学作品を紹介しています。
+                <br>
+                文学と名の付くものは古今東西、山のようにありますが、ここでは中でもおよそ名作として知られているような、誰が読んでも満足できるであろう作品を中心に紹介しています。
+                <br>
+                時代を超えて、人々に読み継がれている作品には、
+                <br>
+                このサイトが、あなたの本選びの役に立てますと幸いです。
             </h2>
         </section>
 
