Add books page layout

--- a/books.html
+++ b/books.html
@@ -16,8 +16,8 @@
     <title>古典のすゝめ</title>
 </head>
 <body>
-    <header>
-        <div class="site-header">
+    <header id="header-books">
+        <div class="site-header-books">
             <a href="index.html">
                 <img src="images/logo/main-logo.png" alt="古典のすゝめ">
             </a>
@@ -33,36 +33,47 @@
     </header>
 
     <main>
-        <!--main image-->
-        <section id="main-image">
-            <img src="images/main_image.jpg" alt="main image">
-        </section>
-        
-        <br>
+        <!--book-list-->
+        <section id="book-list" class="container">
+            <div class="book-list-frame">
+                    <a href="#">
+                        <div class="book-list-content">
+                            <img src="images/books/les_misérables.jpg" class="book-list-img" alt="les misérables">
+                            <div class="book-list-info">
+                                <h2 class="book-list-info-title">レ・ミゼラブル</h2>
+                                <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
+                                <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
+                                <div class="book-list-info-description">
+                                    <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
+                                    <p class="book-list-info-description-sentence">ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。我々の道徳的価値観を改めて考え直すきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
+                                </div>
+                                <p class="book-list-info-copy">書影: 岩波書店</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
 
-        <!--about this site-->
-        <section id="introduction" class="container">
-            <h1 class="introduction-title">
-                このサイトについて
-            </h1>
-            <br>
-            <h2 class="introduction-content">
-                このサイトでは、古典を中心とした文学作品を紹介しています。
-                <br>
-                文学と名の付くものは古今東西、山のようにありますが、ここではおよそ名作として知られているような、誰が読んでもきっと満足できるであろう作品を中心に紹介しています。
-                <br>
-                <br>
-                人は誰もが、人生に対する「問い」を抱いていると思います。文学作品は、その「問い」の自分なりの答えを見つける上での思考の触媒になるでしょう。
-                <br>
-                文学には中々ヘビーな作品も多いですが、どれも作者の生、労作の記録であり贈り物です。読めば、何かしら得るものはあると思います。
-                <br>     
-                <br>           
-                このサイトが、あなたの本選びの役に立てますと幸いです。
-            </h2>
-        </section>
+            <div class="book-list-frame">
+                    <a href="#">
+                        <div class="book-list-content">
+                            <img src="images/books/les_misérables.jpg" class="book-list-img" alt="les misérables">
+                            <div class="book-list-info">
+                                <h2 class="book-list-info-title">レ・ミゼラブル</h2>
+                                <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
+                                <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
+                                <div class="book-list-info-description">
+                                    <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
+                                    <p class="book-list-info-description-sentence">ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。我々の道徳的価値観を改めて考え直すきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
+                                </div>
+                                <p class="book-list-info-copy">書影: 岩波書店</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
 
-        <br>
-        <br>
+        </section>
 
         <!--bestsellers-->
         <section id="bestsellers" class="container">
@@ -71,7 +82,7 @@
             <div class="items-grid">
                 <div class="items">
                     <a href="#">
-                        <img src="images/books/les_misérables.jpg" alt="les misérables">
+                        <img src="images/les_misérables.jpg" alt="les misérables">
                         <div class="items-description">
                             <h2 class="items-description-title">Les Misérables</h2>
                             <p class="items-description-reviews">⭐⭐⭐⭐⭐  123 Reviews</p>
@@ -85,7 +96,7 @@
                 
                 <div class="items">
                     <a href="#">
-                        <img src="images/books/les_misérables.jpg" alt="ningen no kensetu">
+                        <img src="images/ninngenn_no_kensetsu.jpg" alt="ningen no kensetu">
                         <div class="items-description">
                             <h2 class="items-description-title">Ningen no Kensetsu</h2>
                             <p class="items-description-reviews">⭐⭐⭐⭐⭐  123 Reviews</p>
@@ -99,7 +110,7 @@
 
                 <div class="items">
                     <a href="#">
-                        <img src="images/books/les_misérables.jpg" alt="notes from underground">
+                        <img src="images/notes_from_underground.jpg" alt="notes from underground">
                         <div class="items-description">
                             <h2 class="items-description-title">Notes from Underground</h2>
                             <p class="items-description-reviews">⭐⭐⭐⭐⭐  123 Reviews</p>
@@ -113,7 +124,7 @@
 
                 <div class="items">
                     <a href="#">
-                        <img src="images/books/les_misérables.jpg" alt="ping pong">
+                        <img src="images/ping_pong.jpg" alt="ping pong">
                         <div class="items-description">
                             <h2 class="items-description-title">Ping Pong</h2>
                             <p class="items-description-reviews">⭐⭐⭐⭐⭐  123 Reviews</p>
@@ -127,7 +138,7 @@
 
                 <div class="items">
                     <a href="#">
-                        <img src="images/books/les_misérables.jpg" alt="the never ending story">
+                        <img src="images/the_never_ending_story.jpg" alt="the never ending story">
                         <div class="items-description">
                             <h2 class="items-description-title">The Never Ending Story</h2>
                             <p class="items-description-reviews">⭐⭐⭐⭐⭐  123 Reviews</p>
@@ -141,7 +152,7 @@
 
                 <div class="items">
                     <a href="#">
-                        <img src="images/books/les_misérables.jpg" alt="the priest and his the_priest_and_his_apprentice">
+                        <img src="images/the_priest_and_his_apprentice.jpg" alt="the priest and his the_priest_and_his_apprentice">
                         <div class="items-description">
                             <h2 class="items-description-title">The Priest and His Apprentice</h2>
                             <p class="items-description-reviews">⭐⭐⭐⭐⭐ 123 Reviews</p>
@@ -155,7 +166,7 @@
 
                 <div class="items">
                     <a href="#">
-                        <img src="images/books/les_misérables.jpg" alt="The Silber Spoon">
+                        <img src="images/the_silber_spoon.jpg" alt="The Silber Spoon">
                         <div class="items-description">
                             <h2 class="items-description-title">The Silber Spoon</h2>
                             <p class="items-description-reviews">⭐⭐⭐⭐⭐ 123 Reviews</p>
