Add little change

--- a/books.html
+++ b/books.html
@@ -38,14 +38,14 @@
             <div class="book-list-frame">
                     <a href="#">
                         <div class="book-list-content">
-                            <img src="images/books/les_misérables.jpg" class="book-list-img" alt="les misérables">
+                            <img src="images/books/les_misérables.jpg" class="book-list-img" alt="レ・ミゼラブル">
                             <div class="book-list-info">
                                 <h2 class="book-list-info-title">レ・ミゼラブル</h2>
                                 <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
                                 <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
                                 <div class="book-list-info-description">
                                     <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
-                                    <p class="book-list-info-description-sentence">ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。我々の道徳的価値観を改めて考え直すきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
+                                    <p class="book-list-info-description-sentence">　ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。道徳や倫理について、改めて考えるきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
                                 </div>
                                 <p class="book-list-info-copy">書影: 岩波書店</p>
                             </div>
@@ -57,14 +57,14 @@
             <div class="book-list-frame">
                     <a href="#">
                         <div class="book-list-content">
-                            <img src="images/books/les_misérables.jpg" class="book-list-img" alt="les misérables">
+                            <img src="images/books/shukke-to-sonodeshi.jpg" class="book-list-img" alt="出家とその弟子">
                             <div class="book-list-info">
-                                <h2 class="book-list-info-title">レ・ミゼラブル</h2>
-                                <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
-                                <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
+                                <h2 class="book-list-info-title">出家とその弟子</h2>
+                                <h4 class="book-list-info-writer">作: 倉田百三</h4>
+                                <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
                                 <div class="book-list-info-description">
                                     <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
-                                    <p class="book-list-info-description-sentence">ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。我々の道徳的価値観を改めて考え直すきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
+                                    <p class="book-list-info-description-sentence">　ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。道徳や倫理について、改めて考えるきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
                                 </div>
                                 <p class="book-list-info-copy">書影: 岩波書店</p>
                             </div>
@@ -281,7 +281,7 @@
                     <a href="#">Cookie Preference</a>
                 </p>
                 <div class="copyright">
-                    <small>&copy; Copyright 2023 FuckYouBooks.com</small>
+                    <small>&copy; Copyright 2024 角田雄一</small>
                 </div>
             </div>
         </section>
