--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
         </div>
         <nav class="header-nav">
             <ul>
-                <li><a href="about.html" class="header-nav-link">About</a></li>
-                <li><a href="books.html" class="header-nav-link">Books</a></li>
-                <li><a href="contact.html" class="header-nav-link">Contact</a></li>
-                <li><a href="other-books.html" class="header-nav-link">Other Books</a></li>
+                <li><a href="books.html" class="header-nav-link">海外文学</a></li>
+                <li><a href="contact.html" class="header-nav-link">日本文学</a></li>
+                <li><a href="other-books.html" class="header-nav-link">その他作品</a></li>
             </ul>
         </nav>
     </header>
@@ -46,7 +45,7 @@
                 このサイトについて
             </h1>
             <br>
-            <h2 class="introduction-content">
+            <h3 class="introduction-content">
                 このサイトでは、古典を中心とした文学作品を紹介しています。
                 <br>
                 文学と名の付くものは古今東西、山のようにありますが、ここではおよそ名作として知られているような、誰が読んでもきっと満足できるであろう作品を中心に紹介しています。
@@ -58,7 +57,7 @@
                 <br>     
                 <br>           
                 このサイトが、あなたの本選びの役に立てますと幸いです。
-            </h2>
+            </h3>
         </section>
 
         <br>
