--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <br>
                 人は誰もが、人生に対する「問い」を抱いていると思います。文学作品は、その「問い」の自分なりの答えを見つける上での思考の触媒になるでしょう。
                 <br>
-                文学には中々ヘビーな作品も多いですが、どれも作者の生、労作の記録であり贈り物です。読めば、何かしら得るものはあると思います。
+                文学には中々ヘビーな作品も多いですが、どの作品も作者の生、労作の記録であり贈り物です。読めば、何かしら得るものはあると思います。
                 <br>     
                 <br>           
                 このサイトが、あなたの本選びの役に立てますと幸いです。
@@ -171,98 +171,8 @@
             </div>
         </section>
         
-        <!-- announcement -->
-        <section id="annoucements" class="container">
-            <div class="announcement-grid">
-                <div class="announcement-left">
-                    <img src="images/dostoevsky_starter_pack_ver2.png" alt="dostoevsky starter pack">
-                </div>
-                <div class="announcement-right">
-                    <img src="images/dostoevsky_starter_pack_ver2.png" alt="dostoevsky starter pack">
-                </div>
-            </div>
-        </section>
-        
         <!-- footer -->
         <section id="footer">
-            <div class="footer-content container">
-                <div class="footer-links">
-                    <div class="footer-links-section">
-                        <div class="footer-links-half">
-                            <h3>Support</h3>
-                            <ul>
-                                <li>
-                                    <a href="#">Order Status</a>
-                                </li>
-                                <li>
-                                    <a href="#">Shipping</a>
-                                </li>
-                                <li>
-                                    <a href="#">Return Pollicy</a>
-                                </li>
-                                <li>
-                                    <a href="#">Support Center</a>
-                                </li>
-                                <li>
-                                    <a href="#">Payment Methods</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="footer-links-half">
-                            <h3>About Us</h3>
-                            <ul>
-                                <li>
-                                    <a href="#">About FYB</a>
-                                </li>
-                                <li>
-                                    <a href="#">Social Responsibility</a>
-                                </li>
-                                <li>
-                                    <a href="#">News</a>
-                                </li>
-                                <li>
-                                    <a href="#">Careers at FYB</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="footer-links-section">
-                        <div class="footer-links-half">
-                            <h3>Partnerships</h3>
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://www.defense.gov/">U.S. Department of Defense</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://www.cia.gov/">Central Intelligence Agency</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://www.marunaga.com/product/shirokuma/">Polar Bear</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-sidebar">
-                    <h3>Follow Us</h3>
-                    <a target="_blank" href="https://facebook.com/" title="Like us on Facebook">
-                        <img src="../logo/facebook-white.png" alt="link to facebook">
-                    </a>
-                    <a target="_blank" href="https://www.instagram.com/" title="Follow us on Instagram">
-                        <img src="../logo/instagram-white.png" alt="link to instagram">
-                    </a>
-                    <a target="_blank" href="https://twitter.com/" title="Follow us on Twitter">
-                        <img src="../logo/twitter-white.png" alt="link to twitter">
-                    </a>
-                    <a target="_blank" href="https://www.tumblr.com/" title="Follow us on Tumblr">
-                        <img src="../logo/tumblr-white.png" alt="link to tumblr">
-                    </a>
-                    <a target="_blank" href="https://www.pinterest.com/" title="Follow us on Pinterest">
-                        <img src="../logo/pinterest-white.png" alt="link to pinterest">
-                    </a>
-                </div>
-            </div>
-
             <div class="colophon-content">
                 <p class="colophon-links">
                     <a href="#">Terms of Use</a>
