--- a/japanese-literature.html
+++ b/japanese-literature.html
@@ -40,137 +40,63 @@
 
         <section id="book-list" class="container">
             <div class="book-list-frame">
-                    <a href="https://www.aozora.gr.jp/cards/000256/card1412.html" target="_blank">
-                        <div class="book-list-content">
-                            <img src="images/books/shukke-to-sonodeshi.jpg" class="book-list-img" alt="出家とその弟子">
-                            <div class="book-list-info">
-                                <h2 class="book-list-info-title">出家とその弟子</h2>
-                                <h4 class="book-list-info-writer">作: 倉田百三</h4>
-                                <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
-                                <div class="book-list-info-description">
-                                    <h3 class="book-list-info-description-headline">歎異抄の教えを戯曲化した、日本の宗教文学の傑作</h3>
-                                    <p class="book-list-info-description-sentence">　浄土真宗の開祖「親鸞」を主人公とし、人間が持つ煩悩や罪業と信仰との葛藤を題材としている。ヒューマニズムで一貫された、純粋な作品。発表直後、当時の青年らに熱狂的に支持され、大ベストセラーになった。明解なストーリーで読みやすい。</p>
-                                </div>
-                                <p class="book-list-info-copy">書影: 岩波書店</p>
+                <a href="https://www.aozora.gr.jp/cards/000256/card1412.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/shukke-to-sonodeshi.jpg" class="book-list-img" alt="出家とその弟子">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">出家とその弟子</h2>
+                            <h4 class="book-list-info-writer">作: 倉田百三</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">歎異抄の教えを戯曲化した、日本の宗教文学の傑作</h3>
+                                <p class="book-list-info-description-sentence">　浄土真宗の開祖「親鸞」を主人公とし、人間が持つ煩悩や罪業と信仰との葛藤を題材としている。ヒューマニズムで一貫された、純粋な作品。発表直後、当時の青年らに熱狂的に支持され、大ベストセラーになった。明解なストーリーで読みやすい。</p>
                             </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
 
             <div class="book-list-frame">
-                    <a href="https://www.aozora.gr.jp/cards/001799/card56638.html" target="_blank">
-                        <div class="book-list-content">
-                            <img src="images/books/gin-no-saji.jpg" class="book-list-img" alt="銀の匙">
-                            <div class="book-list-info">
-                                <h2 class="book-list-info-title">銀の匙</h2>
-                                <h4 class="book-list-info-writer">作: 中勘助</h4>
-                                <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
-                                <div class="book-list-info-description">
-                                    <h3 class="book-list-info-description-headline">少年時代の感情世界を書き表した、温かく、どこか懐かしい作品</h3>
-                                    <p class="book-list-info-description-sentence">　なかなか開かなかった茶箪笥の抽匣（ひきだし）からみつけた銀の匙。伯母さんの無限の愛情に包まれて過ごした日々。少年時代の思い出を中勘助が自伝風に綴ったこの作品には、子ども自身の感情世界が、子どもが感じ体験したままに素直に描き出されている。</p>
-                                </div>
-                                <p class="book-list-info-copy">書影: 岩波書店</p>
+                <a href="https://www.aozora.gr.jp/cards/001799/card56638.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/gin-no-saji.jpg" class="book-list-img" alt="銀の匙">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">銀の匙</h2>
+                            <h4 class="book-list-info-writer">作: 中勘助</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">少年時代の感情世界を書き表した、温かく、どこか懐かしい作品</h3>
+                                <p class="book-list-info-description-sentence">　なかなか開かなかった茶箪笥の抽匣（ひきだし）からみつけた銀の匙。伯母さんの無限の愛情に包まれて過ごした日々。少年時代の思い出を中勘助が自伝風に綴ったこの作品には、子ども自身の感情世界が、子どもが感じ体験したままに素直に描き出されている。</p>
                             </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
 
-        </section>
-        
-        <!-- announcement -->
-        <section id="annoucements" class="container">
-            <div class="announcement-grid">
-                <div class="announcement-left">
-                    <img src="images/dostoevsky_starter_pack_ver2.png" alt="dostoevsky starter pack">
-                </div>
-                <div class="announcement-right">
-                    <img src="images/dostoevsky_starter_pack_ver2.png" alt="dostoevsky starter pack">
-                </div>
+            <div class="book-list-frame">
+                <a href="https://www.aozora.gr.jp/cards/000050/card3407.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/yashagaike.jpg" class="book-list-img" alt="夜叉ヶ池">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">夜叉ヶ池</h2>
+                            <h4 class="book-list-info-writer">作: 泉鏡花</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">夜叉ヶ池の龍神伝説を題材とした、幻想の物語</h3>
+                                <p class="book-list-info-description-sentence">　人間の醜さ、愚かさを、現実と幻想の狭間で描いた作品。詩的で美しい日本語で書かれており、作品独特の世界観を際立たせている。泉鏡花が初めて著した戯曲であり、近年これを原作とする演劇も上演されている。</p>
+                            </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                        </div>
+                    </div>
+                </a>
             </div>
+
         </section>
         
         <!-- footer -->
         <section id="footer">
-            <div class="footer-content container">
-                <div class="footer-links">
-                    <div class="footer-links-section">
-                        <div class="footer-links-half">
-                            <h3>Support</h3>
-                            <ul>
-                                <li>
-                                    <a href="#">Order Status</a>
-                                </li>
-                                <li>
-                                    <a href="#">Shipping</a>
-                                </li>
-                                <li>
-                                    <a href="#">Return Pollicy</a>
-                                </li>
-                                <li>
-                                    <a href="#">Support Center</a>
-                                </li>
-                                <li>
-                                    <a href="#">Payment Methods</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="footer-links-half">
-                            <h3>About Us</h3>
-                            <ul>
-                                <li>
-                                    <a href="#">About FYB</a>
-                                </li>
-                                <li>
-                                    <a href="#">Social Responsibility</a>
-                                </li>
-                                <li>
-                                    <a href="#">News</a>
-                                </li>
-                                <li>
-                                    <a href="#">Careers at FYB</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="footer-links-section">
-                        <div class="footer-links-half">
-                            <h3>Partnerships</h3>
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://www.defense.gov/">U.S. Department of Defense</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://www.cia.gov/">Central Intelligence Agency</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://www.marunaga.com/product/shirokuma/">Polar Bear</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-sidebar">
-                    <h3>Follow Us</h3>
-                    <a target="_blank" href="https://facebook.com/" title="Like us on Facebook">
-                        <img src="../logo/facebook-white.png" alt="link to facebook">
-                    </a>
-                    <a target="_blank" href="https://www.instagram.com/" title="Follow us on Instagram">
-                        <img src="../logo/instagram-white.png" alt="link to instagram">
-                    </a>
-                    <a target="_blank" href="https://twitter.com/" title="Follow us on Twitter">
-                        <img src="../logo/twitter-white.png" alt="link to twitter">
-                    </a>
-                    <a target="_blank" href="https://www.tumblr.com/" title="Follow us on Tumblr">
-                        <img src="../logo/tumblr-white.png" alt="link to tumblr">
-                    </a>
-                    <a target="_blank" href="https://www.pinterest.com/" title="Follow us on Pinterest">
-                        <img src="../logo/pinterest-white.png" alt="link to pinterest">
-                    </a>
-                </div>
-            </div>
-
             <div class="colophon-content">
                 <p class="colophon-links">
                     <a href="#">Terms of Use</a>
