Adds "The old man and the sea"

--- a/foreign-literature.html
+++ b/foreign-literature.html
@@ -75,6 +75,23 @@
                 </a>
             </div>
 
+            <div class="book-list-frame">
+                <a href="https://www.aozora.gr.jp/cards/001847/card57347.html">
+                    <div class="book-list-content">
+                        <img src="images/books/the-oldman-and-the-sea.jpg" class="book-list-img" alt="老人と海">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">老人と海</h2>
+                            <h4 class="book-list-info-writer">作: ヘミングウェイ / 訳: 高見浩</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">老人と巨大な魚との死闘を描いた、人間の尊厳と悲劇の物語</h3>
+                                <p class="book-list-info-description-sentence">　非常にシンプルな文体と構成が特徴的である。「映像」で魅せる映画があるように、本作は「文章」で魅せる文学であり、言語が本来持つ魅力を味わうことの出来る作品だ。作品発表当時、ヘミングウェイの浮気に愛想をつかしていた妻は、本作を読んで「これなら、あなたの仕打ちを許してもいい」を言ったそうだ。</p>
+                            </div>
+                            <p class="book-list-info-copy">ヘミングウェイ/著, 高見浩/訳『老人と海』（新潮文庫刊）</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </section>
         
         <!-- footer -->
