Adds the Three-cornered-world

--- a/japanese-literature.html
+++ b/japanese-literature.html
@@ -93,6 +93,23 @@
                 </a>
             </div>
 
+            <div class="book-list-frame">
+                <a href="https://www.aozora.gr.jp/cards/000148/card776.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/kusamakura.jpg" class="book-list-img" alt="草枕">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">草枕</h2>
+                            <h4 class="book-list-info-writer">作: 夏目漱石</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐</h4>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">「非人情」の世界を描いた、漱石の芸術論が盛り込まれた作品</h3>
+                                <p class="book-list-info-description-sentence">　「いやな奴」で埋まっている人の世を脱し、「非人情」の人でなしの国に遊ぼうとする画工の物語。西洋化する日本における、漱石による東洋の芸術論や文学論がつづられており、その中で近代の危険性を表現している。</p>
+                            </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </section>
         
         <!-- footer -->
