--- a/foreign-literature.html
+++ b/foreign-literature.html
@@ -47,6 +47,7 @@
                             <h2 class="book-list-info-title">レ・ミゼラブル</h2>
                             <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
+                            <a href="#" target="_blank" class="book-list-info-aozora">青空文庫</a>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
                                 <p class="book-list-info-description-sentence">　ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。道徳や倫理について、改めて考えるきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
@@ -88,6 +89,24 @@
                                 <p class="book-list-info-description-sentence">　非常にシンプルな文体と構成が特徴的である。「映像」で魅せる映画があるように、本作は「文章」で魅せる文学であり、言語が本来持つ魅力を味わうことの出来る作品だ。作品発表当時、ヘミングウェイの浮気に愛想をつかしていた妻は、本作を読んで「これなら、あなたの仕打ちを許してもいい」と言ったそうだ。</p>
                             </div>
                             <p class="book-list-info-copy">ヘミングウェイ/著, 高見浩/訳『老人と海』（新潮文庫刊）</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="book-list-frame">
+                <a href="https://www.aozora.gr.jp/cards/001025/card50909.html">
+                    <div class="book-list-content">
+                        <img src="images/books/faust.jpg" class="book-list-img" alt="ファウスト">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">ファウスト</h2>
+                            <h4 class="book-list-info-writer">作: ゲーテ / 訳: 相良守峯</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐</h4>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">詩人の天才ゲーテが、その一生を掛けて完成させた大作</h3>
+                                <p class="book-list-info-description-sentence">　戯曲形式で書かれた悲劇の物語である。学問に絶望した大学者ファウストが、生の意義を得るため悪魔メフィストと契約し、メフィストはファウストを誘惑していく。非常に難解ではあるが、人間の真の生き方とは何か、大文豪ゲーテがその思想を傾けつくした大作である。</p>
+                            </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
                     </div>
                 </a>
