Adds link to aozora

--- a/foreign-literature.html
+++ b/foreign-literature.html
@@ -47,7 +47,7 @@
                             <h2 class="book-list-info-title">レ・ミゼラブル</h2>
                             <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
-                            <a href="#" target="_blank" class="book-list-info-aozora">青空文庫</a>
+                            <div class="book-list-info-link"><object><a href="#" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
                                 <p class="book-list-info-description-sentence">　ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。道徳や倫理について、改めて考えるきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
